[package]
name = "parse-variants"
version = "0.1.0"
authors = ["geo-ant <54497890+geo-ant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[workspace]
members = ["parse-variants-derive"]

[dependencies]
parse-variants-derive = {path = "parse-variants-derive", version = "0.1.0"}


[dev-dependencies]
syn = {version = "1.0", features = ["full","extra-traits"]}
proc-macro2 = "1.0"
assert2 = "0.3"
macrotest = "1.0"