[package]
name = "parse-variants"
version = "1.0.1"
authors = ["geo-ant <geos.blog@posteo.de>"]
edition = "2021"
homepage = "https://github.com/geo-ant/parse-variants"
repository = "https://github.com/geo-ant/parse-variants"
categories = ["development-tools::procedural-macro-helpers"]
description = "Derive the syn::parse::Parse trait for enumerations and use it to comfortably parse a variant of the enumeration"
readme = "README.md"
keywords = ["parse","either","variant","enum","speculative"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[workspace]
members = ["parse-variants-derive"]

[dependencies]
parse-variants-derive = {path = "parse-variants-derive", version = "1.0.0"}


[dev-dependencies]
syn = {version = "2.0", features = ["full","extra-traits"]}
proc-macro2 = "1.0"
assert2 = "0.3"
macrotest = "1.0"
