[package]
name = "parse-variants-derive"
version = "1.0.2"
authors = ["geo-ant <geos.blog@posteo.de>"]
edition = "2018"
homepage = "https://github.com/geo-ant/parse-variants"
repository = "https://github.com/geo-ant/parse-variants"
categories = ["development-tools::procedural-macro-helpers"]
description = "Macros for the parse-variants crate"
readme = "README.md"
keywords = ["parse","either","variant","enum","speculative"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version="2.0",features=["parsing"]}
